Chore: adds an extra width: auto; to fix a stuck bug

--- a/Resources/public/scss/_navbar.scss
+++ b/Resources/public/scss/_navbar.scss
@@ -104,6 +104,7 @@ body.fixed .content-header .navbar.stuck {
     margin-top: -1.1em;
     padding-left: 2.1428571429em;
     padding-right: 2.1428571429em;
+    width: auto !important;
 }
 
 body.fixed .content-header .navbar.stuck {
